--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,7 +79,7 @@
           <ul class="menu menu_main">
             <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="bookshop/main/index.html">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/genres/main">Жанры</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
             </li>
