--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,7 +77,7 @@
       <div class="wrap">
         <nav class="menuModal" id="navigate">
           <ul class="menu menu_main">
-            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="bookshop/main/index.html">Главная</a>
+            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/bookshop/main">Главная</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/genres/main">Жанры</a>
             </li>
