feat new cntrollers

--- a/src/main/resources/templates/genres/index.html
+++ b/src/main/resources/templates/genres/index.html
@@ -84,7 +84,7 @@
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/authors/main">Авторы</a>
             </li>
           </ul>
         </nav>
@@ -100,144 +100,144 @@
           <div class="Tags Tags_genres">
             <div class="Tags Tags_embed">
               <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html">Лёгкое чтение<span class="undefined-amount">(15638)</span></a>
+                <div class="Tag"><a href="/genres/slug">Лёгкое чтение<span class="undefined-amount">(15638)</span></a>
                 </div>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Фантастика<span class="undefined-amount">(44333)</span></a>
+              <div class="Tag"><a href="/genres/slug">Фантастика<span class="undefined-amount">(44333)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Боевики<span class="undefined-amount">(158)</span></a>
+              <div class="Tag"><a href="/genres/slug">Боевики<span class="undefined-amount">(158)</span></a>
               </div>
               <div class="Tags">
                 <div class="Tags-title">
-                  <div class="Tag"><a href="/genres/slug.html">Детективы<span class="undefined-amount">(10)</span></a>
+                  <div class="Tag"><a href="/genres/slug">Детективы<span class="undefined-amount">(10)</span></a>
                   </div>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Триллер<span class="undefined-amount">(134)</span></a>
+                <div class="Tag"><a href="/genres/slug">Триллер<span class="undefined-amount">(134)</span></a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Крутой детектив<span class="undefined-amount">(934)</span></a>
+                <div class="Tag"><a href="/genres/slug">Крутой детектив<span class="undefined-amount">(934)</span></a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Иронический детектив<span class="undefined-amount">(143443)</span></a>
+                <div class="Tag"><a href="/genres/slug">Иронический детектив<span class="undefined-amount">(143443)</span></a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Про маньяков<span class="undefined-amount">(3331)</span></a>
+                <div class="Tag"><a href="/genres/slug">Про маньяков<span class="undefined-amount">(3331)</span></a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Шпионский детектив<span class="undefined-amount">(94)</span></a>
+                <div class="Tag"><a href="/genres/slug">Шпионский детектив<span class="undefined-amount">(94)</span></a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Криминальный детектив<span class="undefined-amount">(4839)</span></a>
+                <div class="Tag"><a href="/genres/slug">Криминальный детектив<span class="undefined-amount">(4839)</span></a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Классический детектив<span class="undefined-amount">(4488)</span></a>
+                <div class="Tag"><a href="/genres/slug">Классический детектив<span class="undefined-amount">(4488)</span></a>
                 </div>
-                <div class="Tag"><a href="/genres/slug.html">Политический детектив<span class="undefined-amount">(1)</span></a>
+                <div class="Tag"><a href="/genres/slug">Политический детектив<span class="undefined-amount">(1)</span></a>
                 </div>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Фэнтези<span class="undefined-amount">(14338)</span></a>
+              <div class="Tag"><a href="/genres/slug">Фэнтези<span class="undefined-amount">(14338)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Романы<span class="undefined-amount">(1438)</span></a>
+              <div class="Tag"><a href="/genres/slug">Романы<span class="undefined-amount">(1438)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Ужасы<span class="undefined-amount">(156)</span></a>
+              <div class="Tag"><a href="/genres/slug">Ужасы<span class="undefined-amount">(156)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Приключения<span class="undefined-amount">(1538)</span></a>
+              <div class="Tag"><a href="/genres/slug">Приключения<span class="undefined-amount">(1538)</span></a>
               </div>
             </div>
             <div class="Tags">
               <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html">Серьёзное чтение<span class="undefined-amount">(18)</span></a>
+                <div class="Tag"><a href="/genres/slug">Серьёзное чтение<span class="undefined-amount">(18)</span></a>
                 </div>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Биографии<span class="undefined-amount">(18)</span></a>
+              <div class="Tag"><a href="/genres/slug">Биографии<span class="undefined-amount">(18)</span></a>
               </div>
             </div>
             <div class="Tags">
               <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html">Деловая литература<span class="undefined-amount">(158)</span></a>
+                <div class="Tag"><a href="/genres/slug">Деловая литература<span class="undefined-amount">(158)</span></a>
                 </div>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Деловая литература<span class="undefined-amount">(138)</span></a>
+              <div class="Tag"><a href="/genres/slug">Деловая литература<span class="undefined-amount">(138)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Управление экономикой<span class="undefined-amount">(158)</span></a>
+              <div class="Tag"><a href="/genres/slug">Управление экономикой<span class="undefined-amount">(158)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Карьера<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Карьера<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Маркетинг, PR, реклама<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Маркетинг, PR, реклама<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Финансы<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Финансы<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Бизнес-справочники<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Бизнес-справочники<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Личные финансы<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Личные финансы<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Менеджмент<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Менеджмент<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Зарубежная деловая литература<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Зарубежная деловая литература<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Личная эффективность<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Личная эффективность<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Тайм-менеджмент<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Тайм-менеджмент<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Малый бизнес<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Малый бизнес<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Продажи<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Продажи<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Стартапы и создание бизнеса<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Стартапы и создание бизнеса<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Корпоративная культура<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Корпоративная культура<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Банковское дело<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Банковское дело<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Логистика<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Логистика<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Недвижимость<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Недвижимость<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Интернет-бизнес<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Интернет-бизнес<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Ораторское искусство / риторика<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Ораторское искусство / риторика<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Привлечение клиентов и лояльность<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Привлечение клиентов и лояльность<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Делопроизводство<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Делопроизводство<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Переговоры<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Переговоры<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Государственное и муниципальное управление, политическое управление<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Государственное и муниципальное управление, политическое управление<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">О бизнесе популярно<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">О бизнесе популярно<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Ценные бумаги / инвестиции<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Ценные бумаги / инвестиции<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Бухучет / налогообложение / аудит<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Бухучет / налогообложение / аудит<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Российская практика<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Российская практика<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Истории успеха<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Истории успеха<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Интернет-маркетинг<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Интернет-маркетинг<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Лидерство<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Лидерство<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Проектный менеджмент<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Проектный менеджмент<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Управление качеством<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Управление качеством<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Финансовый менеджмент<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Финансовый менеджмент<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Управление персоналом<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Управление персоналом<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Бизнес-процессы<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Бизнес-процессы<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Управление бизнесом<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Управление бизнесом<span class="undefined-amount">(15638)</span></a>
               </div>
             </div>
             <div class="Tags">
               <div class="Tags-title">
-                <div class="Tag"><a href="/genres/slug.html">Драматургия<span class="undefined-amount">(15638)</span></a>
+                <div class="Tag"><a href="/genres/slug">Драматургия<span class="undefined-amount">(15638)</span></a>
                 </div>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Античная драма<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Античная драма<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Комедия<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Комедия<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Сценарий<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Сценарий<span class="undefined-amount">(15638)</span></a>
               </div>
-              <div class="Tag"><a href="/genres/slug.html">Драма, пьеса<span class="undefined-amount">(15638)</span></a>
+              <div class="Tag"><a href="/genres/slug">Драма, пьеса<span class="undefined-amount">(15638)</span></a>
               </div>
             </div>
           </div>
