--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/authors/index.html">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/authors/main">Авторы</a>
             </li>
           </ul>
         </nav>
