--- a/src/main/resources/templates/authors/index.html
+++ b/src/main/resources/templates/authors/index.html
@@ -51,7 +51,9 @@
             <div class="Header-search">
               <div class="search">
                 <form class="form form_search" action="#" method="post" data-searchlimit="20">
-                  <input class="search-input" id="query" name="query" type="text" placeholder="Search over 30 million book titles" value=""/>
+                  <input class="search-input" id="query" name="query" type="text"
+                         th:placeholder="${searchPlaceHolder}"
+                         placeholder="Search over 30 million book titles" value=""/>
                   <button class="search-button" type="submit" name="search" id="search">Поиск
                   </button>
                 </form>
