--- a/src/main/resources/spring-frontend/fragments/header_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/header_fragment.html
@@ -23,12 +23,10 @@
                     </div>
                     <div class="Header-search">
                         <div class="search">
-                            <form class="form form_search" action="#" method="post" data-searchlimit="20"
+                            <form class="form form_search" action="#" method="post" data-searchlimit="20">
 <!--                                  th:object="${searchWordDto}"-->
-                            >
                                 <input class="search-input" id="querypage" name="querypage" type="text"
-                                       placeholder="Search over 30 million book titles"
-                                       value="Техника"/>
+                                       placeholder="Search over 30 million book titles" value="Техника"/>
 <!--                            th:field="*{example}"-->
                             <button class="search-button" type="submit" name="searchpage" id="searchpage">Поиск
                                 </button>
