--- a/src/main/resources/spring-frontend/fragments/footer_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/footer_fragment.html
@@ -37,7 +37,7 @@
                                                               th:href="@{/}" th:text="#{topbar.main}">Главная</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="genres.html"
-                                             th:href="@{/genres}" th:text="#{topbar.genres}">Жанры</a>
+                                             th:href="@{/genres/}" th:text="#{topbar.genres}">Жанры</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="nove.html"
                                              th:href="@{/books/recent}"  th:text="#{topbar.news}">Новинки</a>
