--- a/src/main/resources/spring-frontend/fragments/header_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/header_fragment.html
@@ -23,11 +23,12 @@
                     </div>
                     <div class="Header-search">
                         <div class="search">
-                            <form class="form form_search" action="#" method="post" data-searchlimit="20">
-<!--                                  th:object="${searchWordDto}"-->
+                            <form class="form form_search" action="#" method="post" data-searchlimit="20"
+                                  th:object="${searchWordDto}">
                                 <input class="search-input" id="querypage" name="querypage" type="text"
-                                       placeholder="Search over 30 million book titles" value="Техника"/>
-<!--                            th:field="*{example}"-->
+                                       placeholder="Search over 30 million book titles"
+                                       th:field="*{example}"
+                                       value="Техника"/>
                             <button class="search-button" type="submit" name="searchpage" id="searchpage">Поиск
                                 </button>
                             </form>
@@ -86,7 +87,7 @@
                                                               th:href="@{/}" th:text="#{topbar.main}">Главная</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="genres.html"
-                                             th:href="@{/genres}" th:text="#{topbar.genres}">Жанры</a>
+                                             th:href="@{/genres/}" th:text="#{topbar.genres}">Жанры</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="nove.html"
                                              th:href="@{/books/recent}" th:text="#{topbar.news}">Новинки</a>
