feat:added new recent page

--- a/src/main/resources/spring-frontend/fragments/footer_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/footer_fragment.html
@@ -40,13 +40,16 @@
                                              th:href="@{/genres/}" th:text="#{topbar.genres}">Жанры</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="nove.html"
-                                             th:href="@{/books/recent}"  th:text="#{topbar.news}">Новинки</a>
+                                             th:href="@{/books/news}" th:text="#{topbar.news}">Новинки</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="popular.html"
-                                             th:href="@{/books/popular}"  th:text="#{topbar.popular}">Популярное</a>
+                                             th:href="@{/books/popular}" th:text="#{topbar.popular}">Популярное</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="authors.html"
-                                             th:href="@{/authors}"  th:text="#{topbar.authors}">Авторы</a>
+                                             th:href="@{/authors}" th:text="#{topbar.authors}">Авторы</a>
+                    </li>
+                    <li class="menu-item"><a class="menu-link" href="recent.html"
+                                             th:href="@{/books/recent}" th:text="#{topbar.recent}">Авторы</a>
                     </li>
                 </ul>
             </div>
